--- a/index.html
+++ b/index.html
@@ -2,102 +2,186 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Değer Takibi</title>
+<title>Değer Takibi Dashboard</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <style>
-body { font-family: Arial; max-width: 900px; margin: auto; padding: 15px; }
-input, select, button { width: 100%; padding: 8px; margin: 5px 0; }
-h2 { margin-top: 25px; }
-.card { border: 1px solid #ddd; padding: 15px; border-radius: 8px; margin-top: 10px; }
+body {
+    font-family: -apple-system, BlinkMacSystemFont, Arial;
+    background: #f2f4f8;
+    margin: 20px;
+}
+h1 { margin-bottom: 10px; }
+
+.kpi-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(180px,1fr));
+    gap: 15px;
+    margin-bottom: 25px;
+}
+.kpi {
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+}
+.kpi h3 {
+    font-size: 14px;
+    color: #666;
+}
+.kpi p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.section {
+    background: white;
+    padding: 20px;
+    border-radius: 12px;
+    margin-bottom: 25px;
+}
+
+input, button {
+    padding: 6px;
+    margin: 4px 0;
+}
+button {
+    cursor: pointer;
+}
+
+canvas {
+    margin-top: 20px;
+}
 </style>
 </head>
+
 <body>
 
-<h1>Değer Takibi</h1>
+<h1>📊 Değer Takibi Dashboard</h1>
 
-<div class="card">
-<h2>Günlük Toplam</h2>
-<input type="date" id="date">
-<input type="number" id="total" placeholder="Kasadaki Toplam">
-<button onclick="addDaily()">Kaydet</button>
+<!-- KPI -->
+<div class="kpi-container">
+    <div class="kpi"><h3>Son Değer</h3><p id="kpiValue">-</p></div>
+    <div class="kpi"><h3>Günlük Değişim</h3><p id="kpiDaily">-</p></div>
+    <div class="kpi"><h3>Toplam Harcama</h3><p id="kpiExpense">-</p></div>
+    <div class="kpi"><h3>Son 7 Gün %</h3><p id="kpiWeekly">-</p></div>
 </div>
 
-<div class="card">
-<h2>Nakit Çıkışı</h2>
-<input type="number" id="outAmount" placeholder="Tutar">
-<select id="type">
-  <option value="value">Değere Dönüşen (Stok / Yatırım)</option>
-  <option value="expense">Gerçek Harcama</option>
-</select>
-<button onclick="addOut()">Ekle</button>
+<!-- GİRİŞLER -->
+<div class="section">
+<h3>Günlük Değer</h3>
+<input type="date" id="valueDate">
+<input type="number" id="dailyValue" placeholder="Toplam Değer">
+<button onclick="addValue()">Kaydet</button>
+
+<h3>Harcama</h3>
+<input type="date" id="expenseDate">
+<input type="number" id="expenseAmount" placeholder="Tutar">
+<input type="text" id="expenseNote" placeholder="Açıklama">
+<button onclick="addExpense()">Ekle</button>
 </div>
 
-<div class="card">
-<h2>Özet</h2>
-<p><strong>Toplam Nakit Çıkışı:</strong> <span id="cashOutSum">0</span></p>
-<p><strong>Değere Dönüşen Çıkış:</strong> <span id="valueOutSum">0</span></p>
+<!-- GRAFİKLER -->
+<div class="section">
+<h3>Değer Zaman Grafiği</h3>
+<canvas id="valueChart"></canvas>
 </div>
 
-<div class="card">
-<h2>Gerçek Değer Grafiği</h2>
-<canvas id="chart"></canvas>
+<div class="section">
+<h3>Harcama Dağılımı</h3>
+<canvas id="expenseChart"></canvas>
 </div>
 
 <script>
-let daily = JSON.parse(localStorage.getItem("daily") || "[]");
-let outs = JSON.parse(localStorage.getItem("outs") || "[]");
-
-function addDaily() {
-  daily.push({ date: date.value, total: Number(total.value) });
-  save();
-}
-
-function addOut() {
-  outs.push({
-    date: date.value,
-    amount: Number(outAmount.value),
-    type: type.value
-  });
-  save();
-}
-
-function cashOutTotals() {
-  let total = 0, value = 0;
-  outs.forEach(o => {
-    total += o.amount;
-    if (o.type === "value") value += o.amount;
-  });
-  document.getElementById("cashOutSum").innerText = total.toFixed(2);
-  document.getElementById("valueOutSum").innerText = value.toFixed(2);
-}
-
-function draw() {
-  const labels = daily.map(d => d.date);
-  const data = daily.map(d => d.total);
-
-  if (window.c) window.c.destroy();
-  window.c = new Chart(document.getElementById("chart"), {
-    type: 'line',
-    data: {
-      labels,
-      datasets: [{
-        label: 'Gerçek Değer (Kasadaki)',
-        data
-      }]
-    }
-  });
-}
+let values = JSON.parse(localStorage.getItem("values")) || [];
+let expenses = JSON.parse(localStorage.getItem("expenses")) || [];
 
 function save() {
-  localStorage.setItem("daily", JSON.stringify(daily));
-  localStorage.setItem("outs", JSON.stringify(outs));
-  draw();
-  cashOutTotals();
+    localStorage.setItem("values", JSON.stringify(values));
+    localStorage.setItem("expenses", JSON.stringify(expenses));
+    updateAll();
 }
 
-draw();
-cashOutTotals();
+function addValue() {
+    values.push({ date: valueDate.value, value: Number(dailyValue.value) });
+    values.sort((a,b)=>a.date.localeCompare(b.date));
+    save();
+}
+
+function addExpense() {
+    expenses.push({
+        date: expenseDate.value,
+        amount: Number(expenseAmount.value),
+        note: expenseNote.value || "Diğer"
+    });
+    save();
+}
+
+function updateKPIs() {
+    if (values.length < 2) return;
+
+    const last = values.at(-1);
+    const prev = values.at(-2);
+
+    document.getElementById("kpiValue").innerText = last.value.toLocaleString() + " TL";
+    document.getElementById("kpiDaily").innerText =
+        (((last.value - prev.value) / prev.value) * 100).toFixed(2) + "%";
+
+    document.getElementById("kpiExpense").innerText =
+        expenses.reduce((a,b)=>a+b.amount,0).toLocaleString() + " TL";
+
+    const weekAgo = values.find(v => v.date >= new Date(Date.now()-7*86400000).toISOString().slice(0,10));
+    if (weekAgo) {
+        document.getElementById("kpiWeekly").innerText =
+            (((last.value - weekAgo.value) / weekAgo.value) * 100).toFixed(2) + "%";
+    }
+}
+
+let valueChart, expenseChart;
+
+function updateCharts() {
+    const ctx = document.getElementById("valueChart");
+
+    if (valueChart) valueChart.destroy();
+
+    valueChart = new Chart(ctx, {
+        type: "line",
+        data: {
+            labels: values.map(v=>v.date),
+            datasets: [{
+                label: "Toplam Değer",
+                data: values.map(v=>v.value),
+                fill: true,
+                borderColor: "#4f46e5",
+                backgroundColor: "rgba(79,70,229,0.15)",
+                tension: 0.3
+            }]
+        }
+    });
+
+    const grouped = {};
+    expenses.forEach(e => grouped[e.note] = (grouped[e.note] || 0) + e.amount);
+
+    const ctx2 = document.getElementById("expenseChart");
+    if (expenseChart) expenseChart.destroy();
+
+    expenseChart = new Chart(ctx2, {
+        type: "pie",
+        data: {
+            labels: Object.keys(grouped),
+            datasets: [{
+                data: Object.values(grouped),
+                backgroundColor: ["#6366f1","#22c55e","#f97316","#ef4444","#0ea5e9"]
+            }]
+        }
+    });
+}
+
+function updateAll() {
+    updateKPIs();
+    updateCharts();
+}
+
+updateAll();
 </script>
 
 </body>
