--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>Finans Dashboard v4</title>
+<title>Finans Dashboard v5</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
 body{font-family:-apple-system,Arial;background:#f3f4f6;margin:20px}
-.section{background:#fff;padding:20px;border-radius:14px;margin-bottom:25px}
-.kpi-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:15px}
-.kpi{padding:15px;border-radius:12px;background:#fafafa}
-table{width:100%;border-collapse:collapse;margin-top:10px}
-th,td{border-bottom:1px solid #ddd;padding:6px;font-size:14px}
-button{padding:6px 10px;margin:4px;cursor:pointer}
-input,select{padding:5px}
-.action{cursor:pointer;font-weight:bold}
-.delete{color:red}
-.edit{color:#2563eb}
+h1{margin-bottom:10px}
+.section{background:#fff;padding:16px;border-radius:14px;margin-bottom:18px}
+.kpis{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:12px}
+.kpi{background:#fafafa;padding:12px;border-radius:10px}
+.pos{color:#16a34a;font-weight:600}
+.neg{color:#dc2626;font-weight:600}
+.arrow{font-size:14px;margin-left:4px}
+table{width:100%;border-collapse:collapse;font-size:13px}
+th,td{border-bottom:1px solid #ddd;padding:6px;text-align:left}
+.scroll{max-height:220px;overflow-y:auto}
+button{padding:6px 10px;margin:4px}
+input,select{padding:5px;margin:4px}
+.actions span{cursor:pointer;margin-right:6px}
 </style>
 </head>
 
@@ -23,53 +26,122 @@ input,select{padding:5px}
 
 <h1>📊 Finans Dashboard</h1>
 
-<div class="kpi-grid">
-  <div class="kpi"><b>Son Değer</b><div id="kpiValue">-</div></div>
+<div class="kpis">
+  <div class="kpi"><b>Son Değer</b><div id="kpiLast">-</div></div>
   <div class="kpi"><b>Günlük %</b><div id="kpiDaily">-</div></div>
-  <div class="kpi"><b>Toplam Harcama</b><div id="kpiExpense">-</div></div>
   <div class="kpi"><b>7 Gün %</b><div id="kpiWeekly">-</div></div>
+  <div class="kpi"><b>Aylık %</b><div id="kpiMonthly">-</div></div>
+  <div class="kpi"><b>Toplam Nakit Çıkışı</b><div id="kpiCash">-</div></div>
 </div>
 
 <div class="section">
 <h3>📥 Günlük Değer</h3>
-<input type="date" id="valueDate">
-<input type="number" id="dailyValue">
+<input type="date" id="vDate">
+<input type="number" id="vValue" placeholder="Değer">
 <button onclick="addValue()">Ekle</button>
-<button onclick="exportValues()">Excel</button>
+<input type="file" onchange="importCSV(event,'values')">
+<button onclick="exportCSV(values,'gunluk_deger')">Export</button>
+<div class="scroll">
 <table id="valueTable"></table>
+</div>
 </div>
 
 <div class="section">
-<h3>💸 Harcama</h3>
-<input type="date" id="expenseDate">
-<input type="number" id="expenseAmount">
-<select id="expenseCategory">
-<option>Genel</option><option>Yemek</option><option>Ulaşım</option>
-<option>Ofis</option><option>Diğer</option>
-</select>
-<button onclick="addExpense()">Ekle</button>
-<button onclick="exportExpenses()">Excel</button>
-<table id="expenseTable"></table>
+<h3>💸 Nakit Çıkışı (Kayıp Değil)</h3>
+<input type="date" id="cDate">
+<input type="number" id="cAmount" placeholder="Tutar">
+<input type="text" id="cNote" placeholder="Açıklama">
+<button onclick="addCash()">Ekle</button>
+<input type="file" onchange="importCSV(event,'cash')">
+<button onclick="exportCSV(cash,'nakit_cikis')">Export</button>
+<div class="scroll">
+<table id="cashTable"></table>
+</div>
 </div>
 
-<div class="section"><canvas id="valueChart"></canvas></div>
-<div class="section"><canvas id="expenseChart"></canvas></div>
+<div class="section">
+<h3>📅 Tarih Aralığı Performans</h3>
+<input type="date" id="from">
+<input type="date" id="to">
+<button onclick="rangeCalc()">Hesapla</button>
+<div id="rangeResult"></div>
+</div>
+
+<div class="section">
+<canvas id="chart"></canvas>
+</div>
 
 <script>
+const fmt=n=>Number(n).toLocaleString("tr-TR");
 let values=JSON.parse(localStorage.getItem("values"))||[];
-let expenses=JSON.parse(localStorage.getItem("expenses"))||[];
+let cash=JSON.parse(localStorage.getItem("cash"))||[];
 
 function save(){localStorage.setItem("values",JSON.stringify(values));
-localStorage.setItem("expenses",JSON.stringify(expenses));updateAll();}
+localStorage.setItem("cash",JSON.stringify(cash));update();}
 
-function addValue(){values.push({date:valueDate.value,value:+dailyValue.value});save();}
-function addExpense(){expenses.push({date:expenseDate.value,amount:+expenseAmount.value,cat:expenseCategory.value});save();}
+function addValue(){values.push({date:vDate.value,value:+vValue.value});save();}
+function addCash(){cash.push({date:cDate.value,amount:+cAmount.value,note:cNote.value});save();}
 
-function editValue(i){let v=prompt("Yeni değer",values[i].value);if(v){values[i].value=+v;save();}}
-function editExpense(i){let v=prompt("Yeni tutar",expenses[i].amount);if(v){expenses[i].amount=+v;save();}}
+function del(arr,i){if(confirm("Silinsin mi?")){arr.splice(i,1);save();}}
+function editVal(i){let v=prompt("Yeni değer",values[i].value);if(v){values[i].value=+v;save();}}
+function editCash(i){let v=prompt("Yeni tutar",cash[i].amount);if(v){cash[i].amount=+v;save();}}
 
-function delValue(i){if(confirm("Silinsin mi?")){values.splice(i,1);save();}}
-function delExpense(i){if(confirm("Silinsin mi?")){expenses.splice(i,1);save();}}
+function pct(a,b){return ((b-a)/a)*100;}
+function arrow(p){return p>=0?'<span class="pos">▲</span>':'<span class="neg">▼</span>';}
+function col(p){return p>=0?'pos':'neg';}
+
+function kpis(){
+if(values.length<2)return;
+let last=values.at(-1).value;
+let prev=values.at(-2).value;
+let d=pct(prev,last);
+kpiLast.innerText=fmt(last);
+kpiDaily.innerHTML=`<span class="${col(d)}">${d.toFixed(2)}% ${arrow(d)}</span>`;
+
+let now=new Date(values.at(-1).date);
+let w=values.find(v=>(now-new Date(v.date))/(86400000)>=6);
+if(w){
+let wp=pct(w.value,last);
+kpiWeekly.innerHTML=`<span class="${col(wp)}">${wp.toFixed(2)}% ${arrow(wp)}</span>`;
+}
+
+let m=values.find(v=>new Date(v.date).getMonth()!=now.getMonth());
+if(m){
+let mp=pct(m.value,last);
+kpiMonthly.innerHTML=`<span class="${col(mp)}">${mp.toFixed(2)}% ${arrow(mp)}</span>`;
+}
+
+kpiCash.innerText=fmt(cash.reduce((a,b)=>a+b.amount,0));
+}
+
+let ch;
+function chartRender(data){
+if(ch)ch.destroy();
+ch=new Chart(chart,{type:"bar",
+data:{labels:data.map(v=>v.date),
+datasets:[{data:data.map(v=>v.value)}]}});
+}
+
+function rangeCalc(){
+let f=new Date(from.value),t=new Date(to.value);
+let r=values.filter(v=>new Date(v.date)>=f&&new Date(v.date)<=t);
+if(r.length<2)return;
+let p=pct(r[0].value,r.at(-1).value);
+let tl=r.at(-1).value-r[0].value;
+rangeResult.innerHTML=
+`<b>${p.toFixed(2)}%</b> (${fmt(tl)} TL)`;
+chartRender(r);
+}
+
+function tables(){
+valueTable.innerHTML="<tr><th>Tarih</th><th>Değer</th><th></th></tr>"+
+values.map((v,i)=>`<tr><td>${v.date}</td><td>${fmt(v.value)}</td>
+<td class="actions"><span onclick="editVal(${i})">✎</span><span onclick="del(values,${i})">✖</span></td></tr>`).join("");
+
+cashTable.innerHTML="<tr><th>Tarih</th><th>Tutar</th><th>Açıklama</th><th></th></tr>"+
+cash.map((c,i)=>`<tr><td>${c.date}</td><td>${fmt(c.amount)}</td><td>${c.note}</td>
+<td class="actions"><span onclick="editCash(${i})">✎</span><span onclick="del(cash,${i})">✖</span></td></tr>`).join("");
+}
 
 function exportCSV(data,name){
 let csv=Object.keys(data[0]).join(",")+"\n"+data.map(o=>Object.values(o).join(",")).join("\n");
@@ -78,42 +150,23 @@ a.href=URL.createObjectURL(new Blob([csv],{type:"text/csv"}));
 a.download=name+".csv";a.click();
 }
 
-const exportValues=()=>values.length&&exportCSV(values,"gunluk_degerler");
-const exportExpenses=()=>expenses.length&&exportCSV(expenses,"harcamalar");
-
-let vc,ec;
-function charts(){
-if(vc)vc.destroy();
-vc=new Chart(valueChart,{type:"line",
-data:{labels:values.map(v=>v.date),datasets:[{data:values.map(v=>v.value),fill:true}]}});
-let g={};expenses.forEach(e=>g[e.cat]=(g[e.cat]||0)+e.amount);
-if(ec)ec.destroy();
-ec=new Chart(expenseChart,{type:"pie",
-data:{labels:Object.keys(g),datasets:[{data:Object.values(g)}]}});
+function importCSV(e,type){
+let f=e.target.files[0];
+let r=new FileReader();
+r.onload=()=>{
+let l=r.result.split("\n").slice(1);
+l.forEach(x=>{
+let p=x.split(",");
+if(type=="values")values.push({date:p[0],value:+p[1]});
+else cash.push({date:p[0],amount:+p[1],note:p[2]||""});
+});
+save();
+};
+r.readAsText(f);
 }
 
-function tables(){
-valueTable.innerHTML="<tr><th>Tarih</th><th>Değer</th><th></th></tr>"+
-values.map((v,i)=>`<tr><td>${v.date}</td><td>${v.value}</td>
-<td><span class="action edit" onclick="editValue(${i})">✎</span>
-<span class="action delete" onclick="delValue(${i})"> ✖</span></td></tr>`).join("");
-
-expenseTable.innerHTML="<tr><th>Tarih</th><th>Tutar</th><th>Kategori</th><th></th></tr>"+
-expenses.map((e,i)=>`<tr><td>${e.date}</td><td>${e.amount}</td><td>${e.cat}</td>
-<td><span class="action edit" onclick="editExpense(${i})">✎</span>
-<span class="action delete" onclick="delExpense(${i})"> ✖</span></td></tr>`).join("");
-}
-
-function kpi(){
-if(values.length<2)return;
-let l=values.at(-1),p=values.at(-2);
-kpiValue.innerText=l.value;
-kpiDaily.innerText=(((l.value-p.value)/p.value)*100).toFixed(2)+"%";
-kpiExpense.innerText=expenses.reduce((a,b)=>a+b.amount,0);
-}
-
-function updateAll(){tables();charts();kpi();}
-updateAll();
+function update(){tables();kpis();chartRender(values);}
+update();
 </script>
 </body>
 </html>
